# mk-fhe-zkp

./: CMakeLists.txt  microbench.cpp  proto_large_pl_tighten.cpp  prototype.cpp  prototype_ext.cpp  prototype_full_chain.cpp  prototype_full_chain_nozk.cpp  prototype_longest_chain.cpp  prototype_longest_chain_p17.cpp  prototype_ptct.cpp  prototype_ring_switch.cpp  prototype_tight_chain.cpp  seal_bench.cpp  seal_bench_bgv_bfv.cpp
seal-install/include/SEAL-4.1/seal/util/: config.h
seal-install/lib/cmake/SEAL-4.1/: SEALConfig.cmake
seal-install/lib/pkgconfig/: seal.pc
util/: ring_switch.cpp  ring_switch.h
